# O.R.C.

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: mock_claw_adapter.py  openclaw_gateway_adapter.mjs
src/: App.tsx  TerminalView.tsx  api.ts  commandLibrary.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  app_state.rs  audit.rs  commands.rs  main.rs  models.rs  policy.rs  security.rs
